2000-03-04   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* poe.el (remassq,remassoc,remrassoc): Rewrite.
	(remrassq): New function.

2000-03-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* APEL: Version 10.2 released.

2000-02-29  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe-18.el (current-time-string): Fixed leap year's day counting bug.

2000-02-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* emu.el (enriched-encode): Do nothing for it if FSF Emacs 19.28
	and earlier or XEmacs 19.13 and earlier is used.

2000-02-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* emu.el (enriched-encode): Allow the 3rd argument ORIG-BUF for old
	Emacsen.

2000-02-21  Makoto Nakagawa  <Makoto.Nakagawa@jp.compaq.com>

	* poe.el (format-time-string): New function for Emacs 19.28 and
	earlier.
	(format-time-month-list): New constant for `format-time-string'.
	(format-time-week-list): New constant for `format-time-string'.

2000-02-21   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* poe-18.el (walk-windows): New function.

	* poe-xemacs.el
	(set-extent-properties): New function.
	(run-at-time): New function.
	(cancel-timer): New function.
	(with-timeout-handler): New function.
	(with-timeout): New function.

	* poe.el (remassq): New function.
	(remassoc): New function.
	(remrassoc): New function.
	(get-buffer-window-list): New function.
	(save-selected-frame): New macro.

2000-02-10  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe.el (replace-match): Redefined to add `STRING' optional
	argument.

2000-02-07  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe-18.el (mod): Define as an alias for `%'.
	(overlayp, move-overlay, delete-overlay, overlay-start,
	overlay-end, overlay-buffer, overlay-properties, overlays-at,
	overlays-in, next-overlay-change, previous-overlay-change,
	overlay-lists, overlay-recenter, overlay-get):
	Define as null function.

2000-02-05  MORIOKA Tomohiko  <tomo@m17n.org>

	* mcs-20.el (mime-charset-coding-system-alist): Add
	`iso-2022-jp-3'.
